[gd_scene load_steps=3 format=3 uid="uid://ltpcsqmnpju2"]

[ext_resource type="Script" uid="uid://c1yrfv624un0e" path="res://scripts/Opponent.gd" id="1_e1n8k"]
[ext_resource type="Texture2D" uid="uid://t4063hemsj8g" path="res://sprites/card_slot.png" id="2_nyjaw"]

[node name="Opponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1n8k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 294.0
offset_bottom = 187.0
color = Color(0, 0, 0, 1)

[node name="Address" type="Label" parent="Background"]
layout_mode = 0
offset_left = 10.0
offset_top = 7.0
offset_right = 264.0
offset_bottom = 30.0
text = "0x6B4FE3Be5C115eBd7229ef95338CCc365343ab1E"
text_overrun_behavior = 3

[node name="Bid" type="Label" parent="Background"]
layout_mode = 0
offset_left = 9.0
offset_top = 42.0
offset_right = 49.0
offset_bottom = 65.0
text = "BID:"

[node name="Folded" type="Label" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -4.5
offset_right = 26.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "Folded"

[node name="FinalScore" type="Label" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -4.5
offset_right = 26.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "Final Score:
0"
horizontal_alignment = 1

[node name="Info" type="Control" parent="Background"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Card1" type="TextureRect" parent="Background/Info"]
layout_mode = 0
offset_left = 9.0
offset_top = 78.0
offset_right = 82.0
offset_bottom = 151.0
texture = ExtResource("2_nyjaw")

[node name="Card2" type="TextureRect" parent="Background/Info"]
layout_mode = 0
offset_left = 97.0
offset_top = 78.0
offset_right = 170.0
offset_bottom = 151.0
texture = ExtResource("2_nyjaw")

[node name="Probability" type="Label" parent="Background/Info"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 159.0
offset_right = 290.0
offset_bottom = 208.0
text = "0.0% Chance of Higher Initial Score"
autowrap_mode = 3
